--- a/config/config.json
+++ b/config/config.json
@@ -14,7 +14,7 @@
     "dialect": "mysql"
   },
   "production": {
-    "use_env_variable": "DATABASE_URL",
+    "use_env_variable": "postgres://masedo:admin123@103.181.142.234:5432/literature",
     "dialect": "postgres",
     "protocol": "postgres"
   }
